Removing more z-indexes, hoping it fixes more laying issues. Added color picker corner option.

--- a/v3/board/scss/card.scss
+++ b/v3/board/scss/card.scss
@@ -3,7 +3,7 @@
 	margin-bottom: $margin;
 	min-height: $margin*7;
 	position: relative;
-	z-index: 0;
+	//z-index: 0;
 
 	-webkit-box-shadow: 0px 0px 0px 1px $color-core-100;
 	-moz-box-shadow: 0px 0px 0px 1px $color-core-100;
