--- a/v3/board/scss/field.scss
+++ b/v3/board/scss/field.scss
@@ -1,7 +1,7 @@
 .form-group {
 	margin-bottom: $margin;
 	//position: relative;
-	z-index: 0;
+	//z-index: 0;
 
 	&.is-editing,
 	&.is-active {
